Made a python file from the web scraping exploration notebook

--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "458dce9a",
+   "id": "d4bd28cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,17 +16,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca5465e8",
+   "id": "3e9662a4",
    "metadata": {},
    "source": [
     "## Red Planet Science\n",
-    "https://redplanetscience.com/"
+    "- URL: https://redplanetscience.com/\n",
+    "- Pull recent news stories about Mars"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "5320844e",
+   "id": "d96b2f1b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "290ce6cf",
+   "id": "f8f3712c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "9a7aaaa1",
+   "id": "a85439ac",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "241f85f7",
+   "id": "9524a2ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcd38606",
+   "id": "9f3ae3fe",
    "metadata": {},
    "source": [
     "Website Content Article Structure:\n",
@@ -94,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "00f83a6c",
+   "id": "ce6fe3fe",
    "metadata": {},
    "outputs": [
     {
@@ -120,17 +121,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20b0e847",
+   "id": "ea60ec8e",
    "metadata": {},
    "source": [
     "## Space Images\n",
-    "https://spaceimages-mars.com/"
+    "- URL https://spaceimages-mars.com/\n",
+    "- Pull recent images of Mars"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "ba231618",
+   "id": "26bd0dbd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "4a3d37fb",
+   "id": "ca678038",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "9594f51b",
+   "id": "62b9da2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "66b47102",
+   "id": "fa1eaabc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "432059a3",
+   "id": "0814fccc",
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "1c68887a",
+   "id": "d3978c04",
    "metadata": {},
    "outputs": [
     {
@@ -219,17 +221,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd98b95d",
+   "id": "217ecaf0",
    "metadata": {},
    "source": [
     "## Mars Facts\n",
-    "https://galaxyfacts-mars.com/"
+    "- URL:  https://galaxyfacts-mars.com/\n",
+    "- Pull statistical information for the web app"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "32e9eb73",
+   "id": "771bec96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "71cdc514",
+   "id": "aa3b6f5d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "804790cb",
+   "id": "5911509d",
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "9144ec67",
+   "id": "61d81130",
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "196b6022",
+   "id": "071014f3",
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "b5c479fe",
+   "id": "72f89a0d",
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +809,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "2c6c3ccd",
+   "id": "b9d175ce",
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +832,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "123f33b6",
+   "id": "345117cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -839,7 +842,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4067ff60",
+   "id": "0a0fd0dc",
    "metadata": {},
    "outputs": [],
    "source": []
