--- a/mission_to_mars_challenge.ipynb
+++ b/mission_to_mars_challenge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 63,
    "id": "9bb883d2",
    "metadata": {},
    "outputs": [],
@@ -11,7 +11,8 @@
     "from bs4 import BeautifulSoup as bs\n",
     "from webdriver_manager.chrome import ChromeDriverManager as CDM\n",
     "from config import chromeDriver\n",
-    "import pandas as pd\n"
+    "import pandas as pd\n",
+    "import time\n"
    ]
   },
   {
@@ -26,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "id": "4cc622ce",
    "metadata": {},
    "outputs": [],
@@ -36,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "2b4ecbc6",
    "metadata": {},
    "outputs": [],
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "id": "dc5a376f",
    "metadata": {},
    "outputs": [
@@ -56,7 +57,7 @@
        "True"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -838,19 +839,260 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "0cf4b97c",
+   "metadata": {},
+   "source": [
+    "## Astrogeology USGS\n",
+    "- URL: https://astrogeology.usgs.gov/search/results?q=hemisphere+enhanced&k1=target&v1=Mars\n",
+    "- get images of the 4 hemispheres of Mars"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 110,
-   "id": "5f450d05",
+   "execution_count": 17,
+   "id": "7535e2cb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "browser.quit()"
+    "url = \"https://astrogeology.usgs.gov\" \n",
+    "search = \"/search/results?q=hemisphere+enhanced&k1=target&v1=Mars\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "4feb965d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "browser.visit(url+search)\n",
+    "soup = bs(browser.html, \"html.parser\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "d69964cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<div class=\"item\">\n",
+      " <a class=\"itemLink product-item\" href=\"/search/map/Mars/Viking/cerberus_enhanced\">\n",
+      "  <img alt=\"Cerberus Hemisphere Enhanced thumbnail\" class=\"thumb\" src=\"/cache/images/39d3266553462198bd2fbc4d18fbed17_cerberus_enhanced.tif_thumb.png\"/>\n",
+      " </a>\n",
+      " <div class=\"description\">\n",
+      "  <a class=\"itemLink product-item\" href=\"/search/map/Mars/Viking/cerberus_enhanced\">\n",
+      "   <h3>\n",
+      "    Cerberus Hemisphere Enhanced\n",
+      "   </h3>\n",
+      "  </a>\n",
+      "  <span class=\"subtitle\" style=\"float:left\">\n",
+      "   image/tiff 21 MB\n",
+      "  </span>\n",
+      "  <span class=\"pubDate\" style=\"float:right\">\n",
+      "  </span>\n",
+      "  <br/>\n",
+      "  <p>\n",
+      "   Mosaic of the Cerberus hemisphere of Mars projected into point perspective, a view similar to that which one would see from a spacecraft. This mosaic is composed of 104 Viking Orbiter images acquired…\n",
+      "  </p>\n",
+      " </div>\n",
+      " <!-- end description -->\n",
+      "</div>\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "div = soup.find_all('div', attrs={\"class\":\"item\"})\n",
+    "print(div[0].prettify())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "3c027077",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Cerberus Hemisphere Enhanced'"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "title = div[0].find('h3').text\n",
+    "title"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "a98316ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_page =div[0].find(\"h3\").find_parent().get(\"href\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "1ffe701a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/search/map/Mars/Viking/cerberus_enhanced',\n",
+       " '/search/map/Mars/Viking/schiaparelli_enhanced',\n",
+       " '/search/map/Mars/Viking/syrtis_major_enhanced',\n",
+       " '/search/map/Mars/Viking/valles_marineris_enhanced']"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "face = [item.find(\"h3\").find_parent().get(\"href\") for item in div]\n",
+    "face"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "08088b1f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "browser.visit(url+face[0][\"next_page\"])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "4a5e8130",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "soup = bs(browser.html, \"html.parser\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "c1ab2bf1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Valles Marineris Hemisphere Enhanced'"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "div = soup.find(\"div\", attrs={\"class\":\"content\"})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "e12543ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/cerberus_enhanced.tif'"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "div = soup.find(\"div\", attrs={\"class\":\"downloads\"})\n",
+    "img = div.find_all(\"a\")[1].get(\"href\")\n",
+    "img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "676ffc33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mars = list()\n",
+    "for item in face:\n",
+    "    d = dict()\n",
+    "    browser.visit(url+item)\n",
+    "    time.sleep(2)  ## \n",
+    "    soup = bs(browser.html, \"html\")\n",
+    "    div = soup.find(\"div\", attrs={\"class\":\"downloads\"})\n",
+    "    img = div.find_all(\"a\")[1].get(\"href\")\n",
+    "    div = soup.find(\"div\", attrs={\"class\":\"content\"})\n",
+    "    d[\"title\"] = div.find(\"h2\", attrs={\"class\":\"title\"}).text\n",
+    "    d[\"hemisphere_img\"] = img\n",
+    "    mars.append(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "d1a7d2b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'title': 'Cerberus Hemisphere Enhanced',\n",
+       "  'img_hemisphere': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/cerberus_enhanced.tif'},\n",
+       " {'title': 'Schiaparelli Hemisphere Enhanced',\n",
+       "  'img_hemisphere': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/schiaparelli_enhanced.tif'},\n",
+       " {'title': 'Syrtis Major Hemisphere Enhanced',\n",
+       "  'img_hemisphere': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/syrtis_major_enhanced.tif'},\n",
+       " {'title': 'Valles Marineris Hemisphere Enhanced',\n",
+       "  'img_hemisphere': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/valles_marineris_enhanced.tif'}]"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mars"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7535e2cb",
+   "id": "05484e84",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c4e6f2f",
    "metadata": {},
    "outputs": [],
    "source": []
