working out the bugs for the hemisphere images

--- a/mission_to_mars_challenge.ipynb
+++ b/mission_to_mars_challenge.ipynb
@@ -840,7 +840,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0cf4b97c",
+   "id": "de9bf211",
    "metadata": {},
    "source": [
     "## Astrogeology USGS\n",
@@ -862,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "4feb965d",
+   "id": "db5d6cae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -873,7 +873,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "d69964cc",
+   "id": "77bc0408",
    "metadata": {},
    "outputs": [
     {
@@ -914,7 +914,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "3c027077",
+   "id": "64d05c69",
    "metadata": {},
    "outputs": [
     {
@@ -936,7 +936,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "a98316ce",
+   "id": "7cbf2b6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -946,7 +946,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "1ffe701a",
+   "id": "e3cbf314",
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +971,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "08088b1f",
+   "id": "85f77d5c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -981,7 +981,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "4a5e8130",
+   "id": "2bcfb29b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -991,7 +991,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "c1ab2bf1",
+   "id": "95f0ec65",
    "metadata": {},
    "outputs": [
     {
@@ -1012,7 +1012,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "e12543ad",
+   "id": "c9b81717",
    "metadata": {},
    "outputs": [
     {
@@ -1035,7 +1035,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "676ffc33",
+   "id": "12ae8666",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1044,7 +1044,7 @@
     "    d = dict()\n",
     "    browser.visit(url+item)\n",
     "    time.sleep(2)  ## \n",
-    "    soup = bs(browser.html, \"html\")\n",
+    "    soup = bs(browser.html, \"html.parser\")\n",
     "    div = soup.find(\"div\", attrs={\"class\":\"downloads\"})\n",
     "    img = div.find_all(\"a\")[1].get(\"href\")\n",
     "    div = soup.find(\"div\", attrs={\"class\":\"content\"})\n",
@@ -1056,7 +1056,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "d1a7d2b7",
+   "id": "38676619",
    "metadata": {},
    "outputs": [
     {
@@ -1084,7 +1084,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05484e84",
+   "id": "791bb40e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1092,7 +1092,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c4e6f2f",
+   "id": "d25dd01a",
    "metadata": {},
    "outputs": [],
    "source": []
